packages/nemo-frontend/tests/snapshots/type_errors__check_failing@arg_count_mismatch.nemo.snap
---
source: packages/nemo-frontend/tests/type_errors.rs
expression: "type_errors::render_ty_error(&source, &err, false)"
input_file: packages/nemo-frontend/test_data/failing/arg_count_mismatch.nemo
---
[11] Error: Mismatched arg count. Expected 2 arguments, but got 3
   ╭─[source:1:13]
   │
 2 │   i32_shl(1, 2, 3)
   │          ────┬────  
   │              ╰────── Expected 2 arguments, but got 3 instead
───╯

