packages/nemo-frontend/tests/snapshots/type_errors__check_failing@invalid_literal.nemo.snap
---
source: packages/nemo-frontend/tests/type_errors.rs
expression: "type_errors::render_ty_error(&source, &err, false)"
input_file: packages/nemo-frontend/test_data/failing/invalid_literal.nemo
---
[02] Error: Invalid literal couldn't be parsed
   ╭─[source:1:13]
   │
 1 │ let x = 1000000000000000000000000000000000000000000000000000000000000;
   │         ──────────────────────────────┬──────────────────────────────  
   │                                       ╰──────────────────────────────── Invalid literal
───╯

