packages/nemo-frontend/tests/snapshots/type_errors__check_failing@not_a_function.nemo.snap
---
source: packages/nemo-frontend/tests/type_errors.rs
expression: "type_errors::render_ty_error(&source, &err, false)"
input_file: packages/nemo-frontend/test_data/failing/not_a_function.nemo
---
[16] Error: Can't a call a value of type 'i32' as a function
   ╭─[source:1:13]
   │
 3 │   x(0)
   │   ┬  
   │   ╰── Can't a call a value of type 'i32' as a function
───╯

