packages/nemo-frontend/tests/snapshots/type_errors__check_failing@type_mismatch.nemo.snap
---
source: packages/nemo-frontend/tests/type_errors.rs
expression: "type_errors::render_ty_error(&source, &err, false)"
input_file: packages/nemo-frontend/test_data/failing/type_mismatch.nemo
---
[15] Error: Type mismatch. Expected i32, but got f32
   ╭─[source:1:13]
   │
 1 │ let x : i32 = 10.0
   │         ─┬─  
   │          ╰─── Expected type: 'i32', but got 'f32'
───╯

