packages/nemo-frontend/tests/snapshots/type_errors__check_failing@unknown_function.nemo.snap
---
source: packages/nemo-frontend/tests/type_errors.rs
expression: "type_errors::render_ty_error(&source, &err, false)"
input_file: packages/nemo-frontend/test_data/failing/unknown_function.nemo
---
[06] Error: Unknown function unknown
   ╭─[source:1:13]
   │
 2 │   unknown()
   │   ───┬───  
   │      ╰───── Unknown function 'unknown'
───╯

