packages/nemo-frontend/tests/snapshots/type_errors__check_failing@unknown_intrinsic.nemo.snap
---
source: packages/nemo-frontend/tests/type_errors.rs
expression: "type_errors::render_ty_error(&source, &err, false)"
input_file: packages/nemo-frontend/test_data/failing/unknown_intrinsic.nemo
---
[08] Error: Unknown intrinsic @unknown with argcount: 0
   ╭─[source:1:13]
   │
 2 │   @unknown()
   │   ─────┬────  
   │        ╰────── Unknown intrinsic '@unknown' with '0' arguments
───╯

