packages/nemo-frontend/tests/snapshots/type_errors__check_failing@unknown_type.nemo.snap
---
source: packages/nemo-frontend/tests/type_errors.rs
expression: "type_errors::render_ty_error(&source, &err, false)"
input_file: packages/nemo-frontend/test_data/failing/unknown_type.nemo
---
[07] Error: Unknown type Unknown
   ╭─[source:1:13]
   │
 2 │   let x = Unknown {}
   │           ───┬───  
   │              ╰───── Unknown type 'Unknown'
───╯

